variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:6: error: Boolean does not take parameters
  else (estSurOrange()) { caseOrange = caseOrange + 1}
                        ^